Fix "Happy" moodbar theme

Obviously f78aae8053d2021ec64dc43a3d23f112b8636508 changed some of the
"Happy" theme parameters.

BUG: 264432
FIXED-IN: 2.4.1